[package]
name = "strmap-vs-stringmap"
version = "0.1.0"
authors = ["Dimitar Panayotov <mitko.p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[[bench]]
name = "strmap_vs_stringmap"
harness = false
